# fastapi_learning

./: pyproject.toml
fastapi/: crud.py  database.py  main.py  models.py  request.py  schema.py
